# waypoint_nav

./: README.md
husky_customization/husky_custom_description/: CMakeLists.txt  CMakeLists.txt~  package.xml
husky_customization/husky_custom_description/env-hooks/: 60.husky_custom_description.sh
husky_customization/husky_custom_description/meshes/: gps_mount.STL
husky_customization/husky_custom_description/scripts/: remove_plate.sh
husky_customization/husky_custom_description/urdf/: custom_description.urdf.xacro  custom_description.urdf.xacro~
husky_navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
husky_navigation/launch/: gmapping.launch  gmapping.launch~  husky_configuration.launch~  move_base_nav.launch  move_base_nav.launch~  move_base_nav_continuous.launch
husky_navigation/params/: base_local_planner_DWAP.yaml~  base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  costmap_params.yaml  costmap_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  move_base_params.yaml
husky_navigation/params/Backup/: base_local_planner_params_backup.yaml  base_local_planner_params_backup.yaml~
outdoor_waypoint_nav/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  run.sh  run.sh~  run_continuous.sh  run_mapping.sh  run_sim.sh  run_sim.sh~  tutorials.txt
outdoor_waypoint_nav/GPS_Sim_vs_Outdoor_Results/: notes.txt
outdoor_waypoint_nav/GPS_Sim_vs_Outdoor_Results/datasets/: notes.txt~  plot_filtered_points_outdoor_4.txt  plot_filtered_points_outdoor_5.txt  plot_raw_points_outdoor_4.txt  plot_raw_points_outdoor_5.txt
outdoor_waypoint_nav/launch/: collect_goals.launch  collect_goals_sim.launch  gazebo.launch~  gps.launch~  heading_calibration.launch  heading_calibration_sim.launch  husky_bringup.launch~  lms1xx.launch  localization_run.launch~  localization_sim.launch~  mandala_mapping.launch  navsat_run_sim.launch~  outdoor_waypoint_nav.launch  outdoor_waypoint_nav.launch~  outdoor_waypoint_nav_sim.launch  outdoor_waypoint_nav_sim.launch~  plot_gps_data.launch  rviz_sim.launch~  send_goal.launch  send_goal.launch~  send_goal_sim.launch~  send_goals.launch  send_goals_sim.launch
outdoor_waypoint_nav/launch/include/: filter_scan.launch  gazebo.launch  gazebo.launch~  gps.launch  gps.launch~  heading_calibration.launch  husky_bringup.launch  imu.launch  laser.launch  lms1xx.launch  localization_run.launch  localization_run.launch~  localization_run_sim.launch  safety_node.launch  send_goals.launch  send_goals_continuous.launch  send_goals_continuous_sim.launch  send_goals_sim.launch
outdoor_waypoint_nav/launch/outdoor/: collect_goals.launch  heading_calibration.launch  joy_launch_control.launch  joy_launch_control_continuous.launch  joy_launch_control_mapping.launch  mandala_mapping.launch  outdoor_waypoint_nav.launch  (+6 more)
outdoor_waypoint_nav/params/: bounding_box_filter.yaml  bounding_box_filter.yaml~  ekf_params.yaml  navsat_params.yaml  navsat_params.yaml~  navsat_params_sim.yaml~  outdoor_nav.yaml  outdoor_nav.yaml~  range_filter.yaml
outdoor_waypoint_nav/rviz_config/: model.rviz  outdoor_waypoint_nav_continuous_rviz.rviz  outdoor_waypoint_nav_mapping_rviz.rviz  outdoor_waypoint_nav_rviz.rviz
outdoor_waypoint_nav/scripts/: joy_launch_control.py  joy_launch_control_continuous.py  joy_launch_control_mapping.py
outdoor_waypoint_nav/src/: calibrate_heading.cpp  collect_gps_waypoints.cpp  gps_waypoint.cpp  gps_waypoint.cpp~  gps_waypoint_continuous.cpp  gps_waypoint_continuous1.cpp  gps_waypoint_continuous2.cpp  gps_waypoint_continuous_OLD.cpp  gps_waypoint_mapping.cpp  gps_waypoint_mapping_Old.cpp  gps_waypoint_old.cpp  joy_launch_control.py  plot_gps_waypoints.cpp  points.txt~  points_outdoor_jul_17_grass.txt  points_sim.txt  points_sim.txt~  points_sim_backup.txt  publish_waypoints.cpp  publish_waypoints.cpp~  safety_node.cpp  switch_controllers.cpp  switch_controllers_OLD.cpp  test_file.cpp~
outdoor_waypoint_nav/waypoint_files/: plot_filtered_points.txt  plot_filtered_points.txt~  plot_filtered_points_sim_1.txt  plot_raw_points.txt  plot_raw_points.txt~  points_outdoor.txt  points_outdoor_daycare_demo.txt  points_sim.txt
(+61 files in other folders)
