<?xml version="1.0"?>
<package>
  <name>husky_navigation</name>
  <version>0.0.0</version>
  <description>The package is used to run the navigation stack</description>

  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_slam</build_depend>
  <build_depend>husky_customization</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>outdoor_waypoint_nav</build_depend>
  <build_depend>robot_localization</build_depend>
  <run_depend>hector_mapping_nav</run_depend>
  <run_depend>husky_custom_description</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>outdoor_waypoint_nav</run_depend>
  <run_depend>robot_localization</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
