<?xml version="1.0"?>
<package>
  <name>outdoor_waypoint_nav</name>
  <version>0.0.0</version>
  <description>The outdoor_waypoint_nav package</description>

  <maintainer email="nicholas.c.charron@gmail.com">Nick</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hector_mapping_nav</run_depend>
  <run_depend>husky_control</run_depend>
  <run_depend>husky_customization</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
